tests/fail/data_race/dealloc_read_race2.stderr
warning: thread support is experimental: the scheduler is not preemptive, and can get stuck in spin loops.
         (see https://github.com/rust-lang/miri/issues/1388)

error: Undefined Behavior: pointer to ALLOC was dereferenced after this allocation got freed
  --> $DIR/dealloc_read_race2.rs:LL:CC
   |
LL |             *ptr.0
   |             ^^^^^^ pointer to ALLOC was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside closure at $DIR/dealloc_read_race2.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error; 1 warning emitted

